implemented proper reconnect options
